<?xml version="1.0"?>
<package>
  <name>camera_throttler_nodelets</name>
  <version>0.0.0</version>
  <description>A set of nodelets for throttling topics related to camera messages</description>
  <maintainer email="jweisz@cs.columbia.edu">Jon Weisz</maintainer>


  <license>BSD</license>


  <!-- <url type="website">http://ros.org/wiki/image_throttler_nodelets</url> -->

  <author email="jweisz@cs.columbia.edu">Jon Weisz</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet_topic_tools</build_depend>
  <build_depend>nodelet</build_depend>
	
  <run_depend>pluginlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet_topic_tools</run_depend>
  <run_depend>nodelet</run_depend>
  <export>
    <nodelet plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
